--- a/application/package.json
+++ b/application/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "framer-motion": "^12.15.0",
