--- a/application/package.json
+++ b/application/package.json
@@ -14,10 +14,12 @@
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
