--- a/application/package.json
+++ b/application/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
     "@types/d3": "^7.4.3",
+    "@types/react-helmet": "^6.1.11",
     "d3": "^7.9.0",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3"
